Bug fix: z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1005,7 +1005,7 @@ ul.listing a:hover .listing-title {
     position: fixed;
     inset: 0;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 100;
+    z-index: 550;
 }
 
 /* FILTER MODAL */
@@ -1018,7 +1018,7 @@ ul.listing a:hover .listing-title {
     max-height: calc(100vh - var(--space-xx-large));
     background: var(--color-background);
     border-radius: 12px;
-    z-index: 101;
+    z-index: 600;
     display: flex;
     flex-direction: column;
     overflow: hidden;
